--- a/kettle/Dockerfile
+++ b/kettle/Dockerfile
@@ -17,9 +17,9 @@ FROM ubuntu:18.04
 ENV KETTLE_DB=/data/build.db TZ=America/Los_Angeles
 
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
-    && echo $TZ > /etc/timezone \
-    && apt-get update \
-    && apt-get install -y \
+ && echo $TZ > /etc/timezone \
+ && apt-get update \
+ && apt-get install -y \
     tzdata \
     curl \
     pv \
@@ -28,17 +28,23 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
     python \
     python3 \
     python3-pip \
-    && rm -rf /var/lib/apt/lists/*
+ && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install requests google-cloud-pubsub==0.25.0 google-cloud-bigquery==0.24.0 influxdb ruamel.yaml==0.16
+RUN pip3 install \
+    requests \
+    google-auth \
+    google-cloud-pubsub==0.25.0 \
+    google-cloud-bigquery==0.24.0 \
+    influxdb \
+    ruamel.yaml==0.16
 
-RUN curl -fsSL https://bitbucket.org/squeaky/portable-pypy/downloads/pypy3.6-7.1.1-beta-linux_x86_64-portable.tar.bz2 | tar xj -C opt  && \
-    ln -s /opt/pypy*/bin/pypy /usr/bin
+RUN curl -fsSL https://bitbucket.org/squeaky/portable-pypy/downloads/pypy3.6-7.1.1-beta-linux_x86_64-portable.tar.bz2 | tar xj -C opt \
+ && ln -s /opt/pypy*/bin/pypy /usr/bin
 
-RUN curl -o installer https://sdk.cloud.google.com && \
-    bash installer --disable-prompts --install-dir=/ && \
-    rm installer && \
-    ln -s /google-cloud-sdk/bin/* /bin/
+RUN curl -o installer https://sdk.cloud.google.com \
+ && bash installer --disable-prompts --install-dir=/ \
+ && rm installer \
+ && ln -s /google-cloud-sdk/bin/* /bin/
 
 ADD *.py schema.json runner.sh buckets.yaml /kettle/
 
